# ganash2

./: Makefile.in  config.in  configure  configure.ac  ganash.includes
autom4te.cache/: output.1  traces.0  traces.1
doc/core/: menu-flash-cs6.xml
share/: custom_gtk.css  test.css
share/ganash/pixmap/: splash2.xcf
share/ganash/themes/Default/: gtkrc
share/ganash/ui/: Makefile.am  Makefile.in  layout-main-tools.xml  layout-void.xml  layout-welcome.xml  menu.xml
share/ganash/workspaces/: default.xml
src/: Makefile.am  main.cpp
src/application/: Makefile.am  Makefile.in  application.cpp  application.h  bootstrap.cpp
src/application/player/: Makefile.in  player-window.cpp  player-window.h
src/application/ui/: Makefile.am  Makefile.in  action-manager.h  application-window.cpp  stock.cpp  stock.h
src/application/ui/dialogs/: Makefile.in  splash.cpp
src/plugins/animator/: Makefile.am  Makefile.in  layout.xml
src/plugins/inkscape/: Makefile.in  inkscape.cpp
src/plugins/inspector/: Makefile.in  inspector.h
src/plugins/welcome/: Makefile.am  welcome.h
tests/: Makefile.am
